[tool.poetry]
name = "immunisation-fhir-api"
version = "0.0.1-alpha"
description = "FHIR server for Immunization resource"
authors = []
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/immunisation-fhir-api"
homepage = "https://github.com/NHSDigital/immunisation-fhir-api"
keywords = ["healthcare", "uk", "nhs"]


[tool.poetry.dependencies]
python = "^3.10"
pytest-nhsd-apim = "^2.0.2"