[project]
python = "^3.10"
name = "immunisation-fhir-api"
version = "0.0.1-alpha"
description = "FHIR server for Immunization resource"
license = "MIT"
authors = []
keywords = ["healthcare", "uk", "nhs"]
readme = 'README.md'

[project.urls]
repository = "https://github.com/NHSDigital/immunisation-fhir-api"
homepage = "https://github.com/NHSDigital/immunisation-fhir-api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest-nhsd-apim = "^2.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.7.9"
black = "^20.8b1"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.3"
pyyaml = "^6.0.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.0.5"
pytest = "^6.1.2"
coverage = "^5.5"
aiohttp = "^3.7.3"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
