[tool.poetry]
name = "ack-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "~1.40.10"
mypy-boto3-dynamodb = "^1.40.10"
freezegun      = "^1.5.5"
moto           = "^4"
coverage = "^7.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
