[tool.poetry]
name        = "batch-processor-filter"
version     = "1.0.0"
description = "Lambda function to filter incoming batch file creation events"
authors     = ["VED Team <you@example.com>"]
readme      = "README.md"
packages    = [{include = "src"}]

[tool.poetry.dependencies]
python            = "~3.11"
coverage          = "^7.10.7"
aws-lambda-typing = "~2.20.0"
boto3             = "~1.40.35"
moto              = "^5.1.13"

[build-system]
requires      = ["poetry-core ~= 1.5.0"]
build-backend = "poetry.core.masonry.api"
