[tool.poetry]
name = "e2e_batch"
version = "0.1.0"
description = "End-to-end tests for immunization-batch"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python                  = "~3.11"
boto3                   = "~1.40.28"
pandas                  = "^2.3.2"
dotenv = "^0.9.9"
unittest-parallel = "^1.7.5"

[tool.poetry.group.dev.dependencies]
unittest-parallel = "^1.7.5"
pytest = "^8.4.1"
pytest-xdist = "^3.8.0"

