[project] 
name = "filenameprocessor"
version = "0.1.0"
description = "A brief description of the project."
readme = "README.md"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "fhir.resources ~= 7.0.2",
    "boto3 ~= 1.26.90",
    { name = "boto3-stubs-lite", extras = ["dynamodb"], version = "~1.26.90" },
    "aws-lambda-typing ~= 2.18.0",
    "moto ~= 4.2.11",
    "requests ~= 2.31.0",
    "responses ~= 0.24.1",
    "pydantic ~= 1.10.13",
    "pyjwt ~= 2.8.0",
    "cryptography ~= 42.0.4",
    "cffi ~= 1.16.0",
    "jsonpath-ng >= 1.6.0, < 2.0.0",
    "simplejson >= 3.19.2",
    "structlog >= 24.1.0",
    "redis >= 5.1.1",
    "coverage == 7.6.1",
    "freezegun >= 1.5.1"
]
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core ~= 1.5.0"]
build-backend = "poetry.core.masonry.api"
