[tool.poetry]
name = "mesh-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages    = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "~1.40.45"
mypy-boto3-dynamodb = "^1.40.44"
moto = {extras = ["s3"], version = "^5.1.14"}
coverage = "^7.10.7"
smart-open = {extras = ["s3"], version = "^7.3.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
