[tool.poetry]
name        = "mns-subscription"
version     = "0.1.0"
description = ""
authors     = ["Your Name <you@example.com>"]
packages    = [{include = "src"}]

[tool.poetry.dependencies]
python                  = "~3.11"
boto3                   = "~1.40.15"
pyjwt                   = "~2.10.1"
moto                    = "^5.1.10"
coverage                = "^7.10.4"
requests                = "~2.32.5"
responses               = "~0.25.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
