[tool.poetry]
name = "ack-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "common", from = "../shared/src"}
]

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "~1.41.0"
mypy-boto3-dynamodb = "^1.41.0"
freezegun      = "^1.5.2"
moto           = "^5.1.17"
coverage = "^7.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
