[tool.poetry]
name = "delta-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "common", from = "../shared/src"}
]

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "~1.40.63"
mypy-boto3-dynamodb = "^1.40.44"
moto = "~5.1.14"
python-stdnum = "^2.1"
coverage = "^7.10.7"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
