[project]
name = "id-sync"
version = "0.1.0"
description = "Sync s3 to REDIS"
authors = [
    {name = "nhsdevws",email = "stephen.wates1@nhs.net"}
]

[tool.poetry]
name = "id-sync"
version = "0.1.0"
description = ""
authors = ["s.wates <stephen.wates1@nhs.net>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "common", from = "../shared/src"}
]

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "~1.42.74"
mypy-boto3-dynamodb = "^1.42.73"
moto = "~5.1.22"
python-stdnum = "^2.1"
coverage = "^7.13.5"
redis = "^4.6.0"
cache = "^1.0.3"
pyjwt = {extras = ["crypto"], version = "~2.12.1"}

[tool.poetry.group.dev.dependencies]
coverage = "^7.13.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
