[tool.poetry]
name = "mesh-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "common", from = "../shared/src"}
]

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "~1.42.74"
mypy-boto3-dynamodb = "^1.42.73"
moto = {extras = ["s3"], version = "^5.1.22"}
coverage = "^7.13.5"
smart-open = {extras = ["s3"], version = "^7.5.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
