[tool.poetry]
name = "mns_publisher"
version = "1.0.0"
description = "Lambda function to publish immunisation events to MNS"
authors = ["VED Team <you@example.com>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "common", from = "../shared/src"}
]

[tool.poetry.dependencies]
python = "~3.11"
aws-lambda-typing = "~2.20.0"

[build-system]
requires = ["poetry-core >= 1.5.0"]
build-backend = "poetry.core.masonry.api"
