[tool.poetry]
name = "mns_publisher"
version = "1.0.0"
description = "Lambda function to publish immunisation events to MNS"
authors = ["VED Team <you@example.com>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "common", from = "../shared/src"}
]

[tool.poetry.dependencies]
python = "~3.11"
aws-lambda-typing = "~2.20.0"
coverage          = "^7.13.2"
pyjwt = { version = "^2.12.0", extras = ["crypto"] }
requests          = "^2.33.0"
boto3 = "~1.42.37"
mypy-boto3-dynamodb = "^1.42.33"
moto = "~5.1.20"
cache = "^1.0.3"
aws-lambda-powertools = {version = "3.24.0"}

[build-system]
requires = ["poetry-core >= 1.5.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "responses (>=0.26.0,<0.27.0)"
]
