[tool.poetry]
name        = "mns-subscription"
version     = "0.1.0"
description = ""
authors     = ["Your Name <you@example.com>"]
packages = [
    {include = "src"},
    {include = "common", from = "../shared/src"}
]

[tool.poetry.dependencies]
python                  = "~3.11"
boto3                   = "~1.42.37"
pyjwt                   = {extras = ["crypto"], version = "~2.11.0"}
moto                    = "^5.1.20"
coverage                = "^7.13.2"
requests                = "~2.32.5"
responses               = "~0.25.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
