[tool.poetry]
name        = "mns-subscription"
version     = "0.1.0"
description = ""
authors     = ["Your Name <you@example.com>"]
packages = [
    {include = "src"},
    {include = "common", from = "../shared/src"}
]

[tool.poetry.dependencies]
python                  = "~3.11"
boto3                   = "~1.42.74"
pyjwt                   = {extras = ["crypto"], version = "~2.12.1"}
moto                    = "^5.1.22"
coverage                = "^7.13.5"
requests                = "~2.33.0"
responses               = "~0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
