[tool.poetry]
name = "mock-pds"
version = "1.0.0"
description = "Mock PDS endpoint for ref integration and performance testing"
authors = ["VED Team <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
redis = "^6.1.0"
coverage = "^7.13.2"

[build-system]
requires = ["poetry-core >= 1.5.0"]
build-backend = "poetry.core.masonry.api"