[tool.poetry]
name        = "processor"
version     = "0.1.0"
description = ""
authors     = ["Your Name <you@example.com>"]
readme      = "README.md"
packages = [
    {include = "src"},
    {include = "common", from = "../shared/src"}
]

[tool.poetry.dependencies]
python                  = "~3.11"
"fhir.resources"        = "~7.0.2"
boto3                   = "~1.42.37"
boto3-stubs-lite        = {extras = ["dynamodb"], version = "~1.42.37"}
aws-lambda-typing       = "~2.20.0"
moto                    = "^4"
simplejson              = "^3.20.2"
coverage                = "^7.13.2"
redis                   = "^6.4.0"

[build-system]
requires      = ["poetry-core ~= 1.5.0"]

build-backend = "poetry.core.masonry.api"
