[tool.poetry]
name        = "e2e_automation"
version     = "0.1.0"
description = ""
authors     = ["Your Name <you@example.com>"]
readme      = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python                  = "~3.11"
allure-pytest           = "~2.14.2"
allure-python-commons   = "~2.14.2"
attrs                   = "~25.3.0"
aws-sso-lite            = "~0.0.4"
boto3                   = "~1.38.44"
botocore                = "~1.38.44"
certifi                 = "~2025.4.26"
charset-normalizer      = "~3.4.2"
colorama                = "~0.4.6"
idna                    = "~3.10"
iniconfig                = "~2.1.0"
jmespath                = "~1.0.1"
jsonschema              = "~3.2.0"
lxml                    = "~5.4.0"
Mako                    = "~1.3.10"
MarkupSafe              = "~3.0.2"
numpy                   = "~2.3.1"
packaging               = "~25.0"
pandas                  = "~2.3.0"
parse                   = "~1.20.2"
parse_type              = "~0.6.4"
pluggy                  = "~1.5.0"
pydantic                = "~1.8.2"
pyrsistent              = "~0.20.0"
pytest                  = "~8.3.5"
pytest-bdd              = "~8.1.0"
pytest-check            = "~2.5.3"
python-dateutil         = "~2.9.0.post0"
python-dotenv           = "~1.1.0"
pytz                    = "~2025.2"
requests                = "~2.32.3"
s3transfer              = "~0.13.0"
setuptools              = "~80.9.0"
six                     = "~1.17.0"
typing_extensions       = "~4.14.0"
tzdata                  = "~2025.2"
urllib3                 = "~2.4.0"

[build-system]
requires      = ["poetry-core ~= 1.5.0"]
build-backend = "poetry.core.masonry.api"
