[tool.poetry]
name        = "e2e_automation"
version     = "0.1.0"
description = ""
authors     = ["Your Name <you@example.com>"]
readme      = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
allure-pytest = "~2.14.2"
allure-python-commons = "~2.14.2"
aws-sso-lite = "~0.0.4"
boto3 = "~1.38.44"
botocore = "~1.38.44"
lxml = "~5.4.0"
oath = "^1.4.4"
pandas = "~2.3.0"
pydantic = "~1.8.2"
pytest = "~8.3.5"
pytest-bdd = "~8.1.0"
pytest-check = "~2.5.3"
python-dotenv = "~1.1.0"
requests = "~2.32.3"
typing_extensions = "~4.14.0"

[build-system]
requires      = ["poetry-core ~= 1.5.0"]
build-backend = "poetry.core.masonry.api"
