[tool.poetry]
name = "perf-tests"
version = "0.1.0"
description = ""
authors = ["Matt Jarvis matt.jarvis2@nhs.net"]
readme = "README.md"
packages = [
{ include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
locust = ">=2.42.3,<3.0.0"
pyjwt = { version = ">=2.11.0,<3.0.0", extras = ["crypto"] }
boto3 = ">=1.42.59,<2.0.0"
shared = { path = "../../lambdas/shared", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
